<package format="2">
  <name>velodyne_process</name>
  <version>0.0.0</version>
  <description>The velodyne_process package</description>

  <!-- Maintainer information -->
  <maintainer email="suyeon@todo.todo">suyeon</maintainer>

  <!-- License information -->
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies (컴파일 시 필요한 종속성) -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>velodyne_pcl</build_depend>
  <build_depend>nav_msgs</build_depend>            <!-- Waypoint Publisher에서 사용 -->
  <build_depend>visualization_msgs</build_depend>  <!-- MarkerArray에서 사용 -->
  <build_depend>erp_driver</build_depend>          <!-- erpStatusMsg에서 사용 -->
  <build_depend>message_generation</build_depend>  <!-- 메시지 생성에 필요 -->
  <build_depend>rubber_cone_mission</build_depend> <!-- CentroidWithLabelArray에서 사용 -->

  <!-- Export dependencies (이 패키지를 다른 패키지가 빌드할 때 필요한 종속성) -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Runtime dependencies (실행 시 필요한 종속성) -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>velodyne_pcl</exec_depend>
  <exec_depend>nav_msgs</exec_depend>              <!-- Waypoint Publisher에서 사용 -->
  <exec_depend>visualization_msgs</exec_depend>    <!-- MarkerArray에서 사용 -->
  <exec_depend>erp_driver</exec_depend>            <!-- erpStatusMsg에서 사용 -->
  <exec_depend>message_runtime</exec_depend>       <!-- 메시지 런타임에 필요 -->
  <exec_depend>rubber_cone_mission</exec_depend>   <!-- CentroidWithLabelArray에서 사용 -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
