<?xml version="1.0"?>
<package format="2">
  <name>velodyne_process</name>
  <version>0.0.0</version>
  <description>The velodyne_process package</description>

  <maintainer email="suyeon@todo.todo">suyeon</maintainer>

  <license>TODO</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 빌드 시 필요한 의존성 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>velodyne_pcl</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend> <!-- 추가 -->
  <build_depend>cv_bridge</build_depend> <!-- 추가 -->
  <build_depend>image_transport</build_depend> <!-- 추가 -->
  <build_depend>opencv</build_depend> <!-- 추가 -->

  <!-- 빌드 후 내보내기 위한 의존성 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- 실행 시 필요한 의존성 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>velodyne_pcl</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend> <!-- 추가 -->
  <exec_depend>cv_bridge</exec_depend> <!-- 추가 -->
  <exec_depend>image_transport</exec_depend> <!-- 추가 -->
  <exec_depend>opencv</exec_depend> <!-- 추가 -->


  <export>
    <!-- 기타 설정이 필요하면 여기에 추가 -->
  </export>
</package>
